# rp2040-freertos-template

./: CMakeLists.txt  README.md
lib/BMI08X/: CMakeLists.txt
lib/BMI08X/src/: bmi08a.c
lib/BMM350/: CMakeLists.txt
lib/BMM350/include/: bmm350_oor.h
lib/BMM350/src/: bmm350.c  bmm350_oor.c
lib/BMP3/: CMakeLists.txt
lib/BMP5/: CMakeLists.txt
lib/common/: CMakeLists.txt
lib/common/src/: common.c
lib/commonBMI08X/: CMakeLists.txt
lib/commonBMI08X/include/: commonBMI08X.h
lib/commonBMI08X/src/: commonBMI08X.c
lib/commonBMM350/: CMakeLists.txt
lib/commonBMM350/include/: commonBMM350.h
lib/commonBMM350/src/: commonBMM350.c
lib/commonBMP5/: CMakeLists.txt
lib/commonBMP5/src/: common.c
lib/i2cLib/: CMakeLists.txt
lib/i2cLib/include/: i2cLib.h
lib/i2cLib/src/: i2cLib.c
src/: CMakeLists.txt  FreeRTOSConfig.h  accel.h  mag.h  main.c  pressure.h  runtimeStats.h
